# Athena-Aegis-Engine

./: .env.example  .gitignore  README.md  docker-compose.yml  download_alpaca_options.py  postman_collection.json  print_project_json.py  restart.ps1  run_api_tests.ps1  search_project_configs.py  start.ps1  stop.ps1  symbols.txt
.github/workflows/: ci.yml
backend_orchestrator/: README.md  __init__.py  db_init.py  mock_grpc_server.py  pytest.ini  requirements.txt  server_fastapi.py  validate_integration.py  validate_ui.py
backend_orchestrator/scratch/: check_db.py  check_realtime_db.py  compare_unique_symbols.py  convert_aapl_files.py  inspect_resolved_path.py  inspect_spy_schema.py  query_job_snapshots.py  query_jobs.py  reorganize_data.py  restructure_spy.py  run_all_verifications.py  test_500.py  test_alpaca_bars.py  test_alpaca_contracts.py  test_api_files.py  test_backtest_new_path.py  test_command_routing.py  test_ctypes_dll.py  test_date_parsing.py  test_deep_hedge_grpc.py  test_grpc_directly.py  test_grpc_models_directly.py  test_stock_bars.py  trigger_aapl_backtest.py  trigger_spy_backtest.py
backend_orchestrator/src/: __init__.py
backend_orchestrator/tests/: conftest.py  test_backtest.py  test_gateway.py  test_logs.py  test_strategies.py  test_system.py
cpp_engine/: ARCHITECTURE_EN.md  CMakeLists.txt  README.md  entry_backtest.cpp  entry_live.cpp  entry_live_grpc.cpp  entry_market_data.cpp  low_latency_efforts.md  test_parse.cpp  torch_wrapper.exp  torch_wrapper.lib
cpp_engine/Otrader/: strategy_config.json
cpp_engine/build_local/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
cpp_engine/core/: engine_execution.cpp  engine_hedge.cpp  engine_log.cpp  engine_log.hpp  engine_option_strategy.cpp  engine_position.cpp  portfolio_structure.cpp  portfolio_structure.hpp
cpp_engine/infra/db/: engine_db_pg.cpp  engine_db_pg.hpp
cpp_engine/infra/gateway/: engine_gateway_ib.cpp  engine_gateway_ib.hpp
cpp_engine/infra/marketdata/: engine_data_historical.cpp  engine_data_historical.hpp  engine_data_tradier.cpp  engine_data_tradier.hpp
cpp_engine/proto/: otrader_engine.grpc.pb.cc  otrader_engine.grpc.pb.h  otrader_engine.pb.cc  otrader_engine.pb.h  otrader_engine.proto  zmq_messages.grpc.pb.cc  zmq_messages.grpc.pb.h  zmq_messages.pb.cc  zmq_messages.pb.h  zmq_messages.proto
cpp_engine/runtime/backtest/: engine_backtest.cpp  engine_backtest.hpp  engine_event.cpp  engine_main.cpp
cpp_engine/runtime/live/: engine_event.cpp  engine_event.hpp  engine_grpc.cpp  engine_grpc.hpp  engine_main.cpp  engine_main.hpp  gateway_client.cpp  market_data_client.cpp  market_data_client.hpp  torch_wrapper.cpp
cpp_engine/strategy/: ironcondortest.hpp  iv_mean_revert.hpp  straddle_inventory_scalper.hpp  straddletest.hpp  strategy_registry.cpp  strategy_registry.hpp  template.cpp  template.hpp
cpp_engine/utilities/: base_engine.hpp  black_scholes.cpp  black_scholes.hpp  combo_builder.cpp  combo_builder.hpp  decimal_mock.cpp  ib_mapping.hpp  lets_be_rational_api.hpp  mpsc_ring.hpp  object.cpp  object.hpp  object_pool.hpp  occ_utils.cpp  parquet_loader.cpp  parquet_loader.hpp  portfolio.cpp  portfolio.hpp  spsc_ring.hpp  thread_affinity.hpp  types.hpp  utility.cpp  utility.hpp
data/: README.md
docs/: DeepHedging_Platform_PRD_v2_Python.txt  HFT_CAMP_CODE.ipynb  Phases.md  README.md  affinity_core_interview_response.md  new_chat_brief.md  phase5_start_plan.md  resume_defense_guide.md  steps.md  system_internals_and_networking.md  walkthrough.md  walkthrough_live_trading.md  walkthrough_phase5.md
frontend_terminal/: README.md  package-lock.json  package.json
frontend_terminal/app/: globals.css  layout.tsx
frontend_terminal/lib/: api.ts  nav.ts
frontend_terminal/public/: mockup_ui.html
models/: README.md  deep_hedge_adversarial.pt  deep_hedge_adversarial_v2.pt  deep_hedge_ffnn.pt  deep_hedge_ffnn_v2.pt  deep_hedge_lstm.pt  deep_hedge_lstm_v2.pt
research/: README.md  train_adversarial.ipynb  train_adversarial_v2.ipynb  train_ffnn.ipynb  train_ffnn_v2.ipynb  train_lstm.ipynb  train_lstm_v2.ipynb
scratch/: run_v2_training.py  verify_v2_models.py
scripts/: README.md  convert_spy_eod.py  download_alpaca_options.py  download_bulk_symbols.py  download_extended_range.py  download_prefixed_symbols.py  download_symbol.py  list_all_alpaca_symbols.py  list_available_symbols.py  list_downloadable_symbols.py  run_checksum_tests.ps1  verify_determinism.py  verify_determinism_grpc.py
scripts/config_utilities/: find_references.py  list_projects_config.py
v2_cpp_WIP/: README.md
v2_cpp_WIP/backend/: README.md  server_fastapi.py
v2_cpp_WIP/cpp_engines/: entry_gateway.cpp  entry_live.cpp
v2_cpp_WIP/frontend/: README.md  UI_deisgn.md  package-lock.json  package.json
v2_cpp_WIP/frontend/app/: globals.css  (+1 more)
(+76 files in other folders)
